Edited README, fixed img and katex css not loading issues

--- a/docs/arithmetic/commission_taxes/lesson.mdx
+++ b/docs/arithmetic/commission_taxes/lesson.mdx
@@ -26,11 +26,11 @@ It is common in real estate, banking, insurance, and retail.
 
 ### Formulas
 
-- $ \text{Commission Amount} = \frac{\text{Rate Percentage} \times \text{SP}}{100}$
+- $ \text{Commission Amount} = \dfrac{\text{Rate Percentage} \times \text{SP}}{100}$
 
 - $ \text{Net Income} = \text{SP} - \text{Commission Amount}$
 
-- $ \text{Commission Percent} = \frac{\text{Commission Amount}}{\text{SP}} \times 100\%$
+- $ \text{Commission Percent} = \dfrac{\text{Commission Amount}}{\text{SP}} \times 100\%$
 
 ### Tiered Commission
 
@@ -62,4 +62,4 @@ Income Tax Rates (Nepal)
 
 ### Tax Formula (KaTeX)
 
-$\text{Tax Amount} = \frac{\text{Rate}}{100} \times \text{Taxable Income}$
+$\text{Tax Amount} = \dfrac{\text{Rate}}{100} \times \text{Taxable Income}$
