--- a/docs/arithmetic/profit_loss/lesson.mdx
+++ b/docs/arithmetic/profit_loss/lesson.mdx
@@ -53,15 +53,15 @@ icon: menu_book
 
   $L = CP \times \dfrac{L\%}{100}$
 
-- **Discount Amount** = $\frac{\text{Discount \%}}{100} \times \text{MP}$
+- **Discount Amount** = $\dfrac{\text{Discount \%}}{100} \times \text{MP}$
 
 - **SP** = $\text{MP} - \text{Discount Amount}$
 
-- **VAT Amount** = $\frac{\text{VAT \%}}{100} \times \text{SP}$
+- **VAT Amount** = $\dfrac{\text{VAT \%}}{100} \times \text{SP}$
 
 - **SP with VAT** = $\text{SP} + \text{VAT Amount}$
 
-## Tips and Tricks for Solving Profit & Loss Problems
+## Tips and Tricks
 
 - Read the question carefully. Identify which values are given: CP, MP, SP, profit (P), loss (L), profit% (P%) or loss% (L%).
 
